5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1575_1333.log
== TEST (2019-03-13 12:34:02) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:34:06) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:35:15) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)21
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:35:21) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)21
-- EXECUTION TIME:
0.184282
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:35:47) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)21
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:35:49) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)21
-- EXECUTION TIME:
0.295115
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:36:02) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)21
-- ERROR:
File "XXXX", line 1
    expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:36:04) 
-- CODE:
expressao = (30 – 3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)21
-- EXECUTION TIME:
0.188117
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = (30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:37:45) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:37:47) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.135673
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:37:50) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.200399
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:37:51) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.115747
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:37:51) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.177724
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:37:51) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.102691
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:37:53) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:38:06) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.175168
-- ERROR:
  File "/home/codebench/codes/1575/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:38:46) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(21)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:38:48) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(21)
-- EXECUTION TIME:
0.129923
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:38:55) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(21)
-- EXECUTION TIME:
0.123801
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
